--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cropperjs": "^1.5.11",
     "firebase": "^8.2.9",
     "imask": "^6.0.7",
-    "js-cookie": "^2.2.1"
+    "js-cookie": "^2.2.1",
+    "sortablejs": "^1.14.0"
   },
   "devDependencies": {
     "sass": "^1.32.5",
